refactor: JVM 설정 추가