@@ -63,6 +63,12 @@ allprojects {
 
 
     asciidoctor {
+        forkOptions {
+            jvmArgs(
+                    '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+                    '--add-opens', 'java.base/java.io=ALL-UNNAMED'
+            )
+        }
         inputs.dir snippetsDir
         configurations 'asciidoctorExt'
         dependsOn test
